--- a/ch54hk7i84ghh4v4-sstacy-garner-transfer-page.html
+++ b/ch54hk7i84ghh4v4-sstacy-garner-transfer-page.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -199,7 +198,7 @@
                                 data-aos-duration="500">
                                 <ul>
                                     <li><a href="index.html">Home</a></li>
-                                    <li class="active">Account # 002321457856489</li>
+                                    <li class="active">IBAN # IT62W0306932010000007626489</li>
                                 </ul>
                             </div>
                         </div>
@@ -237,24 +236,24 @@
                     <td>Stacy Garner</td>
                   </tr>
                   <tr>
-                    <td># Number</td>
-                    <td>#002321457856489</td>
+                    <td> Account Number</td>
+                    <td>#000007626489</td>
                   </tr>
                   <tr>
                     <td>Account Type</td>
-                    <td>Offshore Account</td>
+                    <td>Non Resident Current Account</td>
                   </tr>
                   <tr>
                     <td>Account Balance</td>
-                    <td style="font-weight:bold" >€887,465.00</td>
+                    <td style="font-weight:bold" >€25,825,342.45</td>
                   </tr>
                   <tr>
                     <td>Address</td>
-                    <td>2115 SE GRANT ST</td>
+                    <td>525 LIBERTY ROAD</td>
                   </tr>
                   <tr>
-                    <td>Country/State</td>
-                    <td>PORTLAND, OREGON 97214</td>
+                    <td>City/State/Zip</td>
+                    <td> GOLD HILL, NC  28071</td>
                   </tr>
                 </tbody>
               </table>
@@ -268,7 +267,7 @@
       <div class="col-xl-8">
         <div class="cards-details-content-box">
           <h3 class="section-heading">Recipient Account Information</h3>
-          <form class="wire-transfer-form" action="auth-utdt556875hgfh65-sstacy-garner-transfer.html" method="get">
+          <form class="wire-transfer-form" action="auth-utdt556875hgfh65-garner-stacy-transfer.html" method="get">
             <div class="form-group">
               <label for="cf_name">Account Name</label>
               <input type="text" id="cf_name" name="cf_name" placeholder="John Doe" required>
@@ -322,14 +321,33 @@
                                 </div>
                                 <h3>Stacy Garner</h3>
                                 <ul>
-                                    <li><i class="fas fa-road"></i>2115 SE GRANT ST,</li>
-                                    <li><i class="fas fa-road"></i>PORTLAND, OREGON 97214</li>
+                                    <li><i class="fas fa-road"></i> 525 LIBERTY ROAD,</li>
+                                    <li><i class="fas fa-road"></i> GOLD HILL, NC  28071</li>
                                 </ul>
-                                <div class="btns-box">
-                                    <a class="btn-one" href="index.html">
-                                        <span class="txt">Logout</span>
-                                    </a>
-                                </div>
+                                 <div style="
+  display: flex;
+  justify-content: flex-end;
+  padding: 15px 30px;
+  background-color: #f8f9fa;
+  border-bottom: 1px solid #ddd;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
+  border-radius: 5px;
+">
+  <a href="index.html" style="
+    display: inline-block;
+    background-color: #dc3545;
+    color: #fff;
+    padding: 10px 20px;
+    border-radius: 5px;
+    text-decoration: none;
+    font-weight: 600;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    transition: background-color 0.3s ease;
+  " onmouseover="this.style.backgroundColor='#c82333'"
+     onmouseout="this.style.backgroundColor='#dc3545'">
+    🔒 Logout
+  </a>
+</div>
                             </div>
 
                             
@@ -350,7 +368,7 @@
                 <div class="footer-content">
                     <p>&copy; 2004 HARBORVIEW BANK. All rights reserved.</p>
                     <p>Hours for Banking: Mon-Fri 9am-5pm</p>
-                    <p>Customer Service: +44 (0) 003000000</p>
+                    <p>Customer Service: +39 (0) 003000000</p>
                     <div class="social-media">
                         <a href="#" class="social-link"><i class="fab fa-facebook-f"></i></a>
                         <a href="#" class="social-link"><i class="fab fa-twitter"></i></a>
@@ -542,7 +560,7 @@
                 </li>
                 <li>
                     <i class="fa fa-phone-alt"></i>
-                    <a href="tel:+44 (0) 003000000">+44 (0) 003000000</a>
+                    <a href="tel:+39 (0) 003000000">+39 (0) 003000000</a>
                 </li>
             </ul>
             
@@ -579,4 +597,3 @@
 </body>
 
 </html>
-
