--- a/gdhxgccvgf5fxcv234-janet-panarites-account-open.html
+++ b/gdhxgccvgf5fxcv234-janet-panarites-account-open.html
@@ -193,7 +193,7 @@
                     <div class="col-xl-12">
                         <div class="inner-content">
                             <div class="title" data-aos="fade-right" data-aos-easing="linear" data-aos-duration="500">
-                                 <h3>Welcome Janet Panarites</h3>
+                                 <h3>Welcome Luiz Panarites</h3>
                                 <h2>Available Balance</h2> 
                                     <h1>€825,342.87</h1>
                             </div>
@@ -417,10 +417,10 @@
                                         <img src="assets/images/resources/logo-1.png" alt="">
                                     </a>
                                 </div>
-                                <h3>Janet Panarites</h3>
+                                <h3>Luiz Panarites</h3>
                                 <ul>
-                                    <li><i class="fas fa-road"></i> 426 GENE AVE,</li>
-                                    <li><i class="fas fa-road"></i> CHARLOTTE, NORTH CAROLINA 28205</li>
+                                    <li><i class="fas fa-road"></i> Via Vittorio Veneto 102,</li>
+                                    <li><i class="fas fa-road"></i> 00186 Rome, Italy</li>
                                 </ul>
                                 <div style="
   display: flex;
