--- a/ch54hk7i84ghh4v4-janet-panarites-transfer-page.html
+++ b/ch54hk7i84ghh4v4-janet-panarites-transfer-page.html
@@ -221,7 +221,7 @@
           <div class="single-sidebar-box-style1">
             <div class="sidebar-title">
               <div class="dot-box"></div>
-              <h3>Welcome Janet Panarites</h3>
+              <h3>Welcome Luiz Panarites</h3>
             </div>
             <div class="card-types-box">
               <table class="sender-info-table">
@@ -234,7 +234,7 @@
                 <tbody>
                   <tr>
                     <td>Sender's Name</td>
-                    <td>Janet Panarites</td>
+                    <td>Luiz Panarites</td>
                   </tr>
                   <tr>
                     <td> Account Number</td>
@@ -250,11 +250,11 @@
                   </tr>
                   <tr>
                     <td>Address</td>
-                    <td>426 GENE AVE</td>
+                    <td>Via Vittorio Veneto 102 </td>
                   </tr>
                   <tr>
                     <td>City/State/Zip</td>
-                    <td>CHARLOTTE, NORTH CAROLINA 28205</td>
+                    <td>00186 Rome, Italy</td>
                   </tr>
                 </tbody>
               </table>
@@ -320,10 +320,10 @@
                                         <img src="assets/images/resources/logo-11.png" alt="">
                                     </a>
                                 </div>
-                                <h3>Janet Panarites</h3>
+                                <h3>Luiz Panarites</h3>
                                 <ul>
-                                    <li><i class="fas fa-road"></i> 426 GENE AVE,</li>
-                                    <li><i class="fas fa-road"></i> CHARLOTTE, NORTH CAROLINA 28205</li>
+                                    <li><i class="fas fa-road"></i> Via Vittorio Veneto 102,</li>
+                                    <li><i class="fas fa-road"></i> 00186 Rome, Italy</li>
                                 </ul>
                                  <div style="
   display: flex;
